usecases/workload-to-ingress-upstream-disk/client-cluster/workloads/sleep.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleep
  labels:
    app: sleep
    service: sleep
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: sleep
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
      annotations:
        inject.istio.io/templates: "sidecar,spire"
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: sleep
      hostAliases:
        - ip: "10.0.1.50"
          hostnames:
            - "app.example.org"
      containers:
      - name: sleep
        image: curlimages/curl
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
        - name: tmp
          mountPath: /tmp
        - name: sleep-certs
          mountPath: /sleep-certs
        - name: spire-agent-socket
          mountPath: /run/spire/sockets
          readOnly: false
      - name: spiffe-helper
        image: public.ecr.aws/e4m8j0n8/spiffe-helper:latest
        args:
          - -config=/config/helper.conf
        volumeMounts:
          - name: spiffe-helper-config
            mountPath: "/config"
            readOnly: true
      volumes:
      - name: secret-volume
        secret:
          secretName: sleep-secret
          optional: true
      - name: tmp
        emptyDir: {}
      - name: spiffe-helper-config
        configMap:
          name: spiffe-helper-config
      - name: spire-agent-socket
        hostPath:
          path: /run/spire/sockets
          type: Directory
      - name: sleep-certs
        emptyDir: {}
---
