usecases/workload-to-ingress-upstream-disk/client-cluster/workloads/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: app
spec:
  hosts:
  - app.example.org
  ports:
  - number: 8000
    name: https-port
    protocol: HTTP
    targetPort: 8000
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app
spec:
  host: app.example.org
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 8000
      tls:
        mode: ISTIO_MUTUAL # initiates HTTPS when accessing app.example.org
